Inserted Welcome Screen Signed-off-by: Praneet Rohida <Praneet Rohida>

--- a/app/app.scss
+++ b/app/app.scss
@@ -14,3 +14,12 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@font-face {
+    font-family: AppFont;
+    src: url("../assets/fonts/QuattrocentoSans-Regular.ttf");
+}
+
+body, span, button, h1, h2, h3, h4, h5, h6, p, ion-item, ion-title, ion-content {
+font-family: 'AppFont';
+}
