--- a/pages/register/register.scss
+++ b/pages/register/register.scss
@@ -1,3 +1,9 @@
 page-register {
-
+  #map {
+        height: 100%;
+    }
 }
+ion-app._gmaps_cdv_ .nav-decor{
+  background-color: transparent !important;
+}
+ 
